syntax = "proto3";


package resonate.api.user;
//option go_package = "tag";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/merefield/grpc-user-api/proto;user";

service TagService {
  rpc SearchGenres(Query) returns (SearchResults);
}

message SearchResults {
  repeated RelatedUserGroup people = 1;
  repeated RelatedUserGroup artists = 2;
  repeated RelatedUserGroup labels = 3;
  repeated RelatedTrackGroup playlists = 4;
  repeated RelatedTrackGroup albums = 5;
  repeated SearchTrack tracks = 6;
}

message Query {
  string query = 1; // required
}

message Tag {
  string id = 1;
  string type = 2;
  string name = 3;
}

message RelatedUserGroup {
  string id = 1;
  string display_name = 2;
  bytes avatar = 3;
}

message SearchTrackGroup {
  string id = 1;
  string title = 2;
  RelatedUserGroup user_group = 3;
  int32 total_tracks = 4;
  bytes cover = 5;
  string display_artist = 6;
}

message RelatedTrackGroup {
  string id = 1; // required
  string title = 2; // required
  bytes cover = 3; // required
  string type = 4; // required
  string about = 5;
  bool private = 6;
  string display_artist = 7;
  int32 total_tracks = 8;
  RelatedUserGroup user_group = 9;
}

message SearchTrack {
  string id = 1;
  string title = 2;
  repeated RelatedUserGroup artists = 3;
  repeated RelatedTrackGroup track_groups = 4;
}

message Empty {}
